2004-07-19  Glynn Foster  <glynn.foster@sun.com>

	* actions.c: Use g_spawn instead of exec. Patch
	from James Strandboge and Shakti. Fixes #135869.

2004-05-08  Glynn Foster  <glynn.foster@sun.com>

	* log_repaint.c, zoom.c: Patch from Harsh Jaitly  
	for #127091 - log viewer detail view picks wrong 
	entry

2004-05-08  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: Patch from Samuel Stringham to parse
	/etc/syslog.conf on first start up to see if it
	can find some logs to open. Fixes #80865.

2004-04-20  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Fix distcheck.

2004-03-08  Dennis Cranston  <dennis_cranston at yahoo com>

	* Makefile.am: Revert builddir != srcdir fix because it 
	breaks 'make distcheck'.
	
2004-02-23  Julio M Merino Vidal <jmmv@menta.net>
                                                                                
        * Makefile.am: honour gconf configure option
                                                                                
2004-01-18  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (schema_source_data): builddir != srcdir fix.

2004-01-15  Maxim Dzumanenko <mvd@mylinux.com.ua>

	* actions.c: (mon_edit_actions), (edit_action_entry):
	* info.c: (RepaintLogInfo): Add some strings for translation.

2003-12-13  Michael Terry  <mterry@fastmail.fm>

       * Makefile.am, about.c, gnome-system-log.desktop.in, logview.c: Use
       gnome-icon-theme instead of built-in icons.  Fixes #129283.

2003-12-30  Christian Neumair  <chris@gnome-de.org>

	* info.c: (RepaintLogInfo): Use ngettext for plurals (#106700).
	* zoom.c: Add missing gettext calls.

2003-12-06  Jan Arne Petersen  <jpetersen@uni-bonn.de>

	* logview/logview.c: (FileSelectResponse), (LoadLogMenu): Replace
	GtkFileSelection with GtkFileChooser.

2003-06-07  Jason Long  <jlong@messiah.edu>

	* logview/logrtns.c (OpenLogFile): create a hash table
	when log is opened to store paths to date headers
	* logview/log_repaint.c (DrawLogLines): when a new day