@@ -1,3 +1,9 @@
+2004-07-19  Shakti Sen  <shprasad@novell.com>
+
+	*monitor.c (monitor_window_destroyed_cb):
+	Remove the timer to fix the crash.
+	Fixes bug #145120
+
 2004-07-19  Glynn Foster  <glynn.foster@sun.com>
 
 	* actions.c: Use g_spawn instead of exec. Patch
